<resources>
    <string name="app_name"> ဟာသပေဒသာ </string>
    <string name="action_settings">Settings</string>

    <string name="title1"> အညီအမွ် </string>
    <string name="description1">ေနာက္တစ္နွစ္ေပါ့
လင္မယား ၂ ေယာက္စကားမ်ားရန္ျဖစ္ရာမွကြာရွင္းျပတ္ဆဲရန္တရားရံုးတြင္စီစဉ္ေနျကသည္
တရားသူျကီး : မင္းတို့မွာကေလး ၃ ေယာက္ရွိတာဘယ္လိုခြဲမလဲ?
လင္မယား ၂ ေယာက္ေတြေဝသြားျပီးမိနစ္အနည္းငယ္ျကာစဉ္းစားကာ \'တရားသူျကီးမင္းခင္ဗ်ား က်ေနာ္တို့တစ္နွစ္တာအခ်ိန္အတြင္းေနာက္တစ္ေယာက္ထပ္ေမြးျပီးျပန္လာခဲ့ပါ့မယ္\' ဟုေျပာလိုက္သည္။
၉ လခန့္ျကာေသာ္ အျမွြာပူးေလးေမြးေလသည္။
    </string>
    <string name="veryfunny"> အရမ္းရီရတယ္ </string>
    <string name="funny"> ရီရတယ္ </string>
    <string name="previous"> အရင္ဟာျပပါ </string>
    <string name="next"> ေနာက္တစ္ခု </string>

    <string name="title2"> အလွ်င္မလိုပါ </string>
    <string name="description2">
    ေျပးေနေသာ ပီတာေလး ေနာက္ကို ရဲသား တစ္ဦး ေျပးလိုက္ေနသည္ကို၊ လမ္းေထာင့္တြင္ရပ္ေနေသာ ရဲမႈးျကီး ေတြ့သျဖင့္ လွမ္းေမးလိုက္သည္။
\"ေဟ့ . .ရဲသား . . မင္းဘာလို့ ဟိုကေလး ေနာက္ကို အတင္း ေျပးလိုက္ေနရတာလဲ\"
\"သူ ကြ်န္ေတာ့္ကို . . ေနာက္ ဆယ့္ငါးမိနစ္ျကာရင္ ဖင္ကို လာနမ္းလွည့္လို့ ေျပာလို့ပါ ရဲမႈးျကီး\"
\"ေနာက္ဆယ့္ငါးမိနစ္မွဆို အခ်ိန္ရသားပဲ၊ ဘာလို့ အတင္းေျပးလိုက္ေနတာလဲ\"

</string>

    <string name="title3"> တိုင္းျပည္ကို ေခ်ာက္ထဲမက်ေအာင္ ကယ္လိုက္လို့ပါ </string>
     <string name="description3">
ဆင္းရဲရာမွ အလြန္ခ်မ္းသာလာေသာ သေဌးမ်ားကို သတင္းတစ္ခုမွ အင္တာဗ်ူးသည္။
U.S သေဌး။ ။ ကြ်န္ေတာ္ နယူးေယာက္ကိုစေရာက္တုန္းက ေတာ္ေတာ္ဆင္းရဲတာဗ်။ လက္ထဲမွာ ဆင့္ ၅၀ ပဲပါတာနဲ့ ပန္းသီးတစ္လံုးဝယ္တယ္။ ၁ ေဒၚလာနဲ့ျပန္ေရာင္းတယ္။ ေနာက္ပန္းသီးနွစ္လံုး ဝယ္တယ္ ထပ္ေရာင္းတယ္
သတင္းေထာက္။ ။ ဒီလိုနဲ့မ်ားလာတာေပါ့
U.S သေဌး။ ။ မဟုတ္ဘူးဗ် ပန္းသီးေရာင္းေနရင္း အေဒၚဆံုးသြားလို့ ေဒၚလာတစ္သန္း အေမြရတယ္ေလ
---------------------------------------
Russia သေဌး။ ။ ကြ်န္ေတာ္အခုေနတဲ့ စံအိမ္ျကီးက အရင္က ကြ်န္ေတာ္ ဒရိုက္ဘာလုပ္ခဲ့တာေပါ့။
သတင္းေထာက္။ ။ ေအာ္ ဒရိုက္ဘာဘဝကေန သေဌးျဖစ္ေအာင္ ဘယ္လိုလုပ္ခဲ့ရလဲ။
Russia သေဌး။ ။ စံအိမ္ပိုင္ရွင္သေဌးျကီးရဲ့ သမီးနဲ့ညားသြားတယ္ေလ
---------------------------------------
သတင္းေထာက္စိတ္ပ်က္လက္ပ်က္နွင့္ျမန္မာနိုင္ငံေရာက္လာသည္။
သတင္းေထာက္။ ။ ဟိုေလ ခုလို က်ိက်ိတက္ခ်မ္းသာလာတာဘယ္လိုခ်မ္းသာလာလဲသိခ်င္လို့ပါ။
ဘဘျကီး လက္ထဲက ဖတ္လက္စ စာအုပ္ကိုခ်ျပီး မ်က္ေမွာင္ျကံု့ျကည့္သည္။
ဘဘျကီး။ ။ ဒါကရွင္းပါတယ္။ တိုင္းျပည္ေခ်ာက္ထဲမက်ေအာင္ ကယ္လိုက္ပါတယ္

</string>

</resources>
